syntax = "proto3";
package followerList;
option go_package = "tinytiktok/user/proto/followerList";

import "user/info.proto";

message FollowerListRequest {
  int64 user_id = 1;  //用户id
  string token = 2;  //用户鉴权
}

message FollowerListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated info.User user_list = 3; // 用户信息列表
}